<resources>
    <string name="app_name">ProyekKelompok</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login_user">Sign in</string>
    <string name="sondang">sondangsipayung@gmail.com</string>
    <string name="spinner_title">yes</string>
    <string name="menu1">Profil Perusahaan</string>
    <string name="menu2">Program yang ada</string>
    <string name="menu3">Mendaftar Rekrutmen</string>
    <string name="menu4">Syarat Pendaftaran</string>
    <string name="menu5">Berita</string>
    <string name="menu6">Akun</string>
    <string name="title_activity_news">News</string>
    <string name="judulprofil">Profil</string>
    <string name="deskprofil">Radio 92,4 Del FM, yang berlokasi di JL. YP Arjuna Laguboti, Sumatera Utara, Indonesia aged 15-25 years old music segment Indonesia, Mancanegara, Batak </string>
    <string name="deskprofil2">check out our official website at : www.radiodelfm.co.id</string>
    <string name="wa">Whatsapp : 08116219924</string>
    <string name="ig">Instagram : @delfmradio </string>
    <string name="fb">Facebook : @delfm924</string>
    <string name="tw">Twitter : @delfmradio</string>
    <string name="info1">Bagian Produksi</string>
    <string name="info2">Penyiar</string>
    <string name="info3">Music Director</string>
    <string name="info4">Produser</string>
    <string name="info5">REKRUTMENT DEL FEM</string>
    <string name="info6">Produser</string>
</resources>
