<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profil"
    android:background="@color/warnabackground"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="8dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/judul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judulprofil"
                    android:textSize="80px"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    />
                <ImageView
                    android:id="@+id/image"
                    android:layout_below="@id/judul"
                    android:layout_width="500px"
                    android:layout_height="500px"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="20px"
                    android:src="@drawable/logo"
                    />
                <TextView
                    android:id="@+id/deskripsi"
                    android:layout_margin="20dp"
                    android:layout_below="@id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="200px"
                    android:text="@string/deskprofil"
                    android:textSize="20dp"
                    />
                <TextView
                    android:id="@+id/deskripsi2"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_below="@id/deskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="200px"
                    android:text="@string/deskprofil2"
                    android:textSize="20dp"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/deskripsi2"
                    >

                    <ImageView
                        android:id="@+id/wa"
                        android:layout_marginLeft="200px"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/whatsapp"
                        />
                    <TextView
                        android:id="@+id/watx"
                        android:layout_marginLeft="20px"
                        android:layout_toRightOf="@+id/wa"
                        android:layout_width="match_parent"
                        android:layout_height="50px"
                        android:text="@string/wa"
                        />
                    <ImageView
                        android:id="@+id/ig"
                        android:layout_below="@+id/wa"
                        android:layout_marginLeft="200px"
                        android:layout_marginTop="40px"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/instagram"
                        />
                    <TextView
                        android:id="@+id/igtx"
                        android:layout_marginLeft="20px"
                        android:layout_marginTop="40px"
                        android:layout_below="@+id/watx"
                        android:layout_toRightOf="@+id/ig"
                        android:layout_width="match_parent"
                        android:layout_height="50px"
                        android:text="@string/ig"
                        />
                    <ImageView
                        android:id="@+id/fb"
                        android:layout_below="@+id/ig"
                        android:layout_marginLeft="200px"
                        android:layout_marginTop="40px"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/facebook"
                        />
                    <TextView
                        android:id="@+id/fbtx"
                        android:layout_marginLeft="20px"
                        android:layout_marginTop="40px"
                        android:layout_below="@+id/igtx"
                        android:layout_toRightOf="@+id/ig"
                        android:layout_width="match_parent"
                        android:layout_height="50px"
                        android:text="@string/fb"
                        />
                    <ImageView
                        android:id="@+id/tw"
                        android:layout_below="@+id/fb"
                        android:layout_marginLeft="200px"
                        android:layout_marginTop="40px"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/twitter"
                        />
                    <TextView
                        android:id="@+id/twtx"
                        android:layout_marginLeft="20px"
                        android:layout_marginTop="40px"
                        android:layout_below="@+id/fbtx"
                        android:layout_toRightOf="@+id/tw"
                        android:layout_width="match_parent"
                        android:layout_height="50px"
                        android:text="@string/tw"
                        />

                </RelativeLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>