<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warnabackground"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginBottom="20dp"
            >
            <ViewFlipper
                android:id="@+id/v_flipper"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_centerHorizontal="true"
                >
            </ViewFlipper>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            >

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="8dp"
                >
                <ImageView
                    android:id="@+id/gambar1"
                    android:layout_width="500px"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/satu" />

                <TextView
                    android:id="@+id/menu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gambar1"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/info1"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="15dp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/news2"
                android:layout_toRightOf="@+id/news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="8dp"
                >
                <ImageView
                    android:id="@+id/gambar2"
                    android:layout_width="200px"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/dua" />

                <TextView
                    android:id="@+id/menu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gambar1"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/info2"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="15dp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/news3"
                android:layout_below="@+id/news2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="8dp"
                >
                <ImageView
                    android:id="@+id/gambar3"
                    android:layout_width="500px"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/tiga" />

                <TextView
                    android:id="@+id/menu3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gambar1"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/info3"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="15dp" />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/news4"
                android:layout_below="@+id/news2"
                android:layout_toRightOf="@+id/news3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="8dp"
                >
                <ImageView
                    android:id="@+id/gambar4"
                    android:layout_width="200px"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/empat" />

                <TextView
                    android:id="@+id/menu4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gambar1"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/info4"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="15dp" />

            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>